2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* capplets/keybindings/00-multimedia-key.xml.in:
	* capplets/keybindings/01-desktop-key.xml.in:
	* capplets/keybindings/50-metacity-desktop-key.xml.in:
	* capplets/keybindings/50-metacity-key.xml.in:
	* capplets/keybindings/Makefile.am:
	* capplets/keybindings/gnome-keybinding-properties.c:
	(create_dialog), (should_show_key), (count_rows_foreach),
	(ensure_scrollbar), (append_keys_to_tree), (parse_start_tag),
	(append_keys_to_tree_from_file), (reload_key_entries),
	(setup_dialog):
	* po/POTFILES.in: Make all the keybindings be external to the keybindings
	capplet itself. This allows applications to add their own keybindings
	without recompilation (Closes: #410758)

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Vitaliy Ischenko <betalb@gmail.com>

	* capplets/about-me/gnome-about-me.glade:
	* capplets/accessibility/keyboard/gnome-accessibility-keyboard-properties.glade:
	* capplets/default-applications/gnome-default-applications-properties.glade:
	* capplets/keyboard/gnome-keyboard-properties.glade:
	* capplets/network/gnome-network-properties.glade:
	don't hardcode the invisible char property in glade files (closes bug
	#393879)

2007-03-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.18.0.

2007-03-11  Jens Granseuer  <jensgr@gmx.net>

	* README: remove obsolete list of dependencies, and update references
	to cvs (closes bug #344741)

2007-03-04  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Loic Minier <lool+gnome@via.ecp.fr>

	* configure.in: fix linker flags for fontilus (part of bug #413468)

2007-02-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.17.92.

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

2007-02-20  Denis Washington  <denisw@svn.gnome.org>

	* shell/gnomecc.desktop: Reverting the default use of the shell and
	use the menus for 2.18 instead. The shell still needs some love and