@@ -11,6 +11,9 @@
 	name="/apps/gnome_settings_daemon/keybindings/volume_up" />
 
 	<KeyListEntry
+	name="/apps/gnome_settings_daemon/keybindings/media" />
+
+	<KeyListEntry
 	name="/apps/gnome_settings_daemon/keybindings/play" />
 
 	<KeyListEntry
