@@ -20,7 +20,7 @@
             <default></default>
             <locale name="C">
                 <short>Volume mute</short>
-                <long>Volume mute's shortcut</long>
+                <long>Volume mute's shortcut.</long>
             </locale>
         </schema>
 
@@ -156,6 +156,16 @@
             </locale>
         </schema>
 
+        <schema>
+            <key>/schemas/apps/gnome_settings_daemon/keybindings/media</key>
+            <applyto>/apps/gnome_settings_daemon/keybindings/media</applyto>
+            <type>string</type>
+            <default></default>
+            <locale name="C">
+                <short>Media player</short>
+                <long>Media player key's shortcut.</long>
+            </locale>
+        </schema>
 
         <schema>
             <key>/schemas/apps/gnome_settings_daemon/keybindings/play</key>
