@@ -1,3 +1,11 @@
+2007-03-20  Priit Laes  <plaes@svn.gnome.org>
+
+	* capplets/keybindings/00-multimedia-key.xml.in:
+	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in: Add schemas
+	to media keybinding.
+
+	Introduces preferred media application support. Bug #362578.
+
 2007-03-19  Bastien Nocera  <hadess@hadess.net>
 
 	* capplets/keybindings/00-multimedia-key.xml.in:
